improve logging and tool bar layout

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
         border: 1px solid rgba(255,255,255,0.2);
         border-radius: 8px;
         padding: 0.4rem 0.6rem;
+        cursor: pointer;
+      }
+      select option {
+        background: rgba(8, 12, 24, 0.95);
+        color: #eaf0ff;
+        border-radius: 8px;
+        padding: 0.4rem;
       }
       .label { color: #bcd0ff; font-size: 0.85rem; }
 
